Added home landing route to project and swapped redirect from '/intro' to ''

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
 
         <nav id="navbar" class="nav-menu navbar">
             <ul>
-                <li><a routerLink="/intro" routerLinkActive="active" href="home" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
+                <li><a routerLink="" routerLinkActive="active" href="home" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
                 <li><a routerLink="/about" routerLinkActive="active" href="about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
                 <li><a routerLink="/resume" routerLinkActive="active" href="resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
                 <li><a routerLink="/hero" routerLinkActive="active" href="hero" class="nav-link scrollto"><i class="bx bx-envelope "></i> <span>Contact</span></a></li>
