--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,5 +24,8 @@
         <!-- .nav-menu -->
     </div>
 </header>
-<!-- End Header -->
+
+<!-- <div class="loading-overlay" *ngIf="loading">
+    <md-progress-bar mode="indeterminate"></md-progress-bar>
+</div> -->
 <router-outlet></router-outlet>
