--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -36,7 +36,7 @@
                 </div>
 
                 <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-                    <form action="mailto:richross707@gmail.com" method="get" class="php-email-form">
+                    <form herf="mailto:richross707@gmail.com" method="get" id="form" class="php-email-form">
                         <div class="row">
                             <div class="form-group col-md-6">
                                 <label for="name">Your Name</label>
@@ -60,13 +60,11 @@
                             <div class="error-message"></div>
                             <div class="sent-message">Your message has been sent. Thank you!</div>
                         </div>
-                        <div class="text-center"><button type="submit" value="Send">Send Message</button></div>
+                        <div class="text-center"><button type="submit" disabled>Send Message</button></div>
+                        <div class="sent-message">Under construction!</div>
                     </form>
-
                 </div>
-
             </div>
-
         </div>
     </section>
     <!-- End Contact Section -->
