new game table, animation skills

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -52,7 +52,7 @@
                     SAP HANA, ABAP. python and SQL. I am able to effectively self-manage during independent projects, as well as collaborate in a team setting
                 </p>
             </div>
-            <div class="row skills-content">
+            <!-- <div class="row skills-content">
 
                 <div class="col-lg-6" data-aos="fade-up">
 
@@ -104,7 +104,7 @@
 
                 </div>
 
-            </div>
+            </div> -->
 
         </div>
     </section>
