--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,7 @@
                 <li><a routerLink="/about" routerLinkActive="active" href="about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
                 <li><a routerLink="/resume" routerLinkActive="active" href="resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
                 <li><a routerLink="/hero" routerLinkActive="active" href="hero" class="nav-link scrollto"><i class="bx bx-envelope "></i> <span>Contact</span></a></li>
+                <li><a routerLink="/game" routerLinkActive="active" href="game" class="nav-link scrollto"><i class="bx bx-game "></i> <span>Game</span></a></li>
             </ul>
         </nav>
         <!-- .nav-menu -->
