--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -10,7 +10,7 @@
 
             <div class="row" data-aos="fade-in">
 
-                <div class="col-lg-5 d-flex align-items-stretch">
+                <div class="align-items-stretch">
                     <div class="info">
                         <div class="address">
                             <i class="bi bi-geo-alt"></i>
@@ -33,36 +33,6 @@
                         <iframe src="https://maps.google.com/maps?q=Pheanix%20view%20estate&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
                     </div>
 
-                </div>
-
-                <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-                    <form herf="mailto:richross707@gmail.com" method="get" id="form" class="php-email-form">
-                        <div class="row">
-                            <div class="form-group col-md-6">
-                                <label for="name">Your Name</label>
-                                <input type="text" name="name" class="form-control" id="name" required>
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="name">Your Email</label>
-                                <input type="email" class="form-control" name="email" id="email" required>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="name">Subject</label>
-                            <input type="text" class="form-control" name="subject" id="subject" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="name">Message</label>
-                            <textarea class="form-control" name="message" rows="10" required></textarea>
-                        </div>
-                        <div class="my-3">
-                            <div class="loading">Loading</div>
-                            <div class="error-message"></div>
-                            <div class="sent-message">Your message has been sent. Thank you!</div>
-                        </div>
-                        <div class="text-center"><button type="submit" disabled>Send Message</button></div>
-                        <div class="sent-message">Under construction!</div>
-                    </form>
                 </div>
             </div>
         </div>
