--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -40,7 +40,7 @@
                     <div class="resume-item">
                         <h4>Accenture</h4>
                         <h5>2020 - 2021</h5>
-                        <p><em>Centurion && Midrand</em></p>
+                        <p><em>Centurion & Midrand</em></p>
                         <ul>
                             <li>AlphaPharm Project I got to understand Oracle Cloud System Integration. I had the privilege of understanding the role of the delivery Lead on the Project and helping the lead of the Finance Stream on the project. </li>
                             <li>Astron energy project I had been using ABAP CDS which main focus was the Data models for the backend of their project. I had the privilege of using and understanding SAP functionality.</li>
