--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -18,8 +18,8 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <ul>
-                                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>RichardMarkRoss.</span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>29 January 1996</span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>RichardMarkRoss.github.io</span></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+27 81 314 8131</span></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>Address:</strong> <span>14 Street, Noordwyk, Midrand</span></li>
                             </ul>
@@ -37,10 +37,10 @@
         </div>
     </section>
     <!-- End About Section -->
-    <a class="d-flex align-items-center justify-content-center">
+    <!-- <a class="d-flex align-items-center justify-content-center">
         <h2>Scroll</h2>
     </a>
-    <a class="d-flex align-items-center justify-content-center"><i class="bi bi-arrow-down"></i></a>
+    <a class="d-flex align-items-center justify-content-center"><i class="bi bi-arrow-down"></i></a> -->
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
         <div class="container">
