--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,10 +6,10 @@
             <img src="../assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
             <h1 class="text-light"><a>Richard Ross</a></h1>
             <div class="social-links mt-3 text-center">
-                <a href="https://twitter.com/RichRoss18" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="https://www.facebook.com/profile.php?id=100004647336596" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="https://www.instagram.com/ricross1800/" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/richard-ross-71a4b3217/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://twitter.com/RichRoss18" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100004647336596" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="https://www.instagram.com/ricross1800/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/richard-ross-71a4b3217/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
             </div>
         </div>
 
