small spelling corrections

--- a/src/app/Game/Game.component.html
+++ b/src/app/Game/Game.component.html
@@ -5,7 +5,7 @@
         <br>
         <p>In my heart, I'll always be a gamer. I became a coder for this reason, among others.</p>
         <p>When I was a youngster, the gaming was always more fascinating to me than simply playing for fun, which was also great.</p>
-        <p>More about how the game functions, how enemies understood what to behave at specific moments, or how objects respond to impacts.</p>
+        <p>More about how the game functions, how enemies understood how to behave at specific moments, or how objects respond to impacts.</p>
         <p>This curiosity has continued to grow since I started programming; in fact, it has become my greatest gift. This curiosity and my genuine love for programming have gone hand in hand.</p>
         <p>My first goal is to buy a pretty good computer as I'm still on the path to making my own game eventually.</p>
         <p>But I'll keep learning and programming until then.
