--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -21,7 +21,7 @@
                         <div class="email">
                             <i class="bi bi-envelope"></i>
                             <h4>Email:</h4>
-                            <p>richross707@gmial.com</p>
+                            <p>richross707@gmail.com</p>
                         </div>
 
                         <div class="phone">
