--- a/src/app/error/error.component.html
+++ b/src/app/error/error.component.html
@@ -4,7 +4,7 @@
         <div class="container">
             <div class="section-title">
                 <h1>404</h1>
-                <p>please go back to home page <a href="">Richard Ross</a></p>
+                <p>My cousins out fighting dragons, and what do I get? Guard duty.</p>
             </div>
         </div>
         <img src='../../assets/img/Where.gif' id='selector' />
