Graph test. currency api test, download
Added a download cv feature,
(in-prod) building a new currency api, with canvajs to showcase currency data

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
                 <a href="https://www.facebook.com/profile.php?id=100004647336596" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
                 <a href="https://www.instagram.com/ricross1800/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/richard-ross-71a4b3217/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://github.com/RichardMarkRoss" target="_blank" class="linkedin"><i class="bx bxl-github"></i></a>
             </div>
         </div>
 
@@ -18,8 +19,9 @@
                 <li><a routerLink="" routerLinkActive="active" href="home" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
                 <li><a routerLink="/about" routerLinkActive="active" href="about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
                 <li><a routerLink="/resume" routerLinkActive="active" href="resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-                <li><a routerLink="/hero" routerLinkActive="active" href="hero" class="nav-link scrollto"><i class="bx bx-envelope "></i> <span>Contact</span></a></li>
-                <li><a routerLink="/game" routerLinkActive="active" href="game" class="nav-link scrollto"><i class="bx bx-game "></i> <span>Game</span></a></li>
+                <li><a routerLink="/hero" routerLinkActive="active" href="hero" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+                <li><a routerLink="/game" routerLinkActive="active" href="game" class="nav-link scrollto"><i class="bx bx-game"></i> <span>Game</span></a></li>
+                <li><a href="https://drive.google.com/file/d/1aRLrdYHEk_OP4i0osLH01XS-J4zJHwg5/view" target="_blank" class="nav-link scrollto"><i class="bx bxl-google-cloud" download></i> <span>Download CV</span></a></li>
             </ul>
         </nav>
         <!-- .nav-menu -->
@@ -30,3 +32,4 @@
     <md-progress-bar mode="indeterminate"></md-progress-bar>
 </div> -->
 <router-outlet></router-outlet>
+
