--- a/src/app/geolocation/line-chart/line-chart.component.html
+++ b/src/app/geolocation/line-chart/line-chart.component.html
@@ -1,5 +1,6 @@
-<p>line-chart works!</p>
-<div class="chart-wrapper">
-    <canvas baseChart [datasets]="lineChartData" [labels]="lineChartLabels" [options]="lineChartOptions" [legend]="lineChartLegend" [plugins]="lineChartPlugins">
-  </canvas>
+<div class="container">
+    <div class="chart-wrapper">
+        <!-- <canvas baseChart [datasets]="lineChartData" [labels]="lineChartLabels" [options]="lineChartOptions" [legend]="lineChartLegend" [plugins]="lineChartPlugins"> -->
+        <!-- </canvas> -->
+    </div>
 </div>
