--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -8,59 +8,79 @@
             </div>
 
             <div class="row">
+                <!-- Left Column -->
                 <div class="col-lg-6" data-aos="fade-up">
-                    <h3 class="resume-title">Sumary</h3>
+                    <h3 class="resume-title">Summary</h3>
                     <div class="resume-item pb-0">
                         <h4>Richard Ross</h4>
-                        <p><em>Full Stack Developer</em></p>
+                        <p><em>Seasoned Full-Stack Developer skilled in Laravel, React, Vue.js, Go, and MySQL. Adept at designing scalable solutions, building APIs, and collaborating within agile teams to deliver optimized applications.</em></p>
                         <ul>
-                            <li>14 Street, Noordwyk, Midrand 1687</li>
-                            <li>+27 81 314 8121</li>
+                            <li>14 Suikerbekkie St, Bromhof, Randburg 2188</li>
+                            <li>+27 81 314 8131</li>
                             <li>richross707@gmail.com</li>
+                            <li><a href="https://github.com/RichardMarkRoss">GitHub</a> | <a href="https://linkedin.com/in/richard-ross-71a4b3217">LinkedIn</a></li>
                         </ul>
                     </div>
 
                     <h3 class="resume-title">Education</h3>
                     <div class="resume-item">
-                        <h4>National Certificate in Information Technology</h4>
-                        <h5>2018 - 2020</h5>
-                        <p><em>Cape Town</em></p>
-                        <p>(Software/Systems Development)
-                        </p>
-                    </div>
-                    <div class="resume-item">
-                        <h4>Project CodeX / FullStack Agile Development</h4>
-                        <h5>2018 - 2019</h5>
-                        <p><em>Cape Town</em></p>
-                        <p></p>
-                    </div>
-                </div>
-                <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-                    <h3 class="resume-title">Professional Experience</h3>
-                    <div class="resume-item">
-                        <h4>Accenture</h4>
-                        <h5>2020 - 2021</h5>
-                        <p><em>Centurion & Midrand</em></p>
+                        <h4>National Certificate in IT (Software/Systems Development)</h4>
+                        <h5>2017 - 2020</h5>
+                        <p><em>Project CodeX, Cape Town</em></p>
                         <ul>
-                            <li>AlphaPharm Project I got to understand Oracle Cloud System Integration. I had the privilege of understanding the role of the delivery Lead on the Project and helping the lead of the Finance Stream on the project. </li>
-                            <li>Astron energy project I had been using ABAP CDS which main focus was the Data models for the backend of their project. I had the privilege of using and understanding SAP functionality.</li>
-
+                            <li>Achieved Java OCA SE 8 Certification (2019)</li>
                         </ul>
                     </div>
                     <div class="resume-item">
-                        <h4>SAC Trucks</h4>
-                        <h5>2021 - current</h5>
-                        <p><em>Web and Flutter Developer</em></p>
+                        <h4>Excelsior High School | Bachelor’s Pass</h4>
+                        <h5>2011 - 2015</h5>
+                        <p><em>Cape Town, Western Cape</em></p>
+                    </div>
+                </div>
+
+                <!-- Right Column -->
+                <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+                    <h3 class="resume-title">Professional Experience</h3>
+                    <div class="resume-item">
+                        <h4>Full-Stack Developer | Smartz Solutions</h4>
+                        <h5>December 2023 - Present</h5>
+                        <p><em>Randpark Ridge, Randburg</em></p>
                         <ul>
-                            <li>I help create, maintain and document web application for employees of the company</li>
-                            <li>using a API to collect data from tecfinity</li>
-                            <li>Designing and creating mobile apps with Flutter</li>
+                            <li>Developed full-stack applications using Laravel integrated with React and Vue.js.</li>
+                            <li>Built scalable APIs using Go and optimized MySQL database queries.</li>
+                            <li>Collaborated with cross-functional teams in an agile environment.</li>
+                        </ul>
+                    </div>
+                    <div class="resume-item">
+                        <h4>Full-Stack Developer | WorldSportsBetting</h4>
+                        <h5>August 2022 - December 2023</h5>
+                        <p><em>Randpark Ridge, Randburg</em></p>
+                        <ul>
+                            <li>Developed web and mobile applications using React, React Native, Swift, and Dart.</li>
+                            <li>Implemented Node.js and Angular solutions for REST API integrations.</li>
+                            <li>Optimized application performance with rigorous testing and debugging.</li>
+                        </ul>
+                    </div>
+                    <div class="resume-item">
+                        <h4>Full-Stack Developer | AddPay</h4>
+                        <h5>December 2021 - February 2022</h5>
+                        <p><em>Stellenbosch</em></p>
+                        <ul>
+                            <li>Developed Angular-based front-end applications and WordPress plugins.</li>
+                            <li>Worked on POS device software and cloud-based payment workflows.</li>
+                        </ul>
+                    </div>
+                    <div class="resume-item">
+                        <h4>Business Integration Analyst | Accenture</h4>
+                        <h5>2020 - 2021</h5>
+                        <p><em>Centurion & Midrand</em></p>
+                        <ul>
+                            <li>Developed data models using ABAP CDS for SAP S/4HANA projects.</li>
+                            <li>Automated processes using Python and Java for Oracle Cloud integrations.</li>
                         </ul>
                     </div>
                 </div>
             </div>
-
         </div>
     </section>
-    <!-- End Resume Section -->
 </main>
