Update resume and link script and styling

--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -15,7 +15,7 @@
                         <h4>Richard Ross</h4>
                         <p><em>Seasoned Full-Stack Developer skilled in Laravel, React, Vue.js, Go, and MySQL. Adept at designing scalable solutions, building APIs, and collaborating within agile teams to deliver optimized applications.</em></p>
                         <ul>
-                            <li>14 Suikerbekkie St, Bromhof, Randburg 2188</li>
+                            <li>Randpark Ridge, Randburg 2188</li>
                             <li>+27 81 314 8131</li>
                             <li>richross707@gmail.com</li>
                             <li><a href="https://github.com/RichardMarkRoss">GitHub</a> | <a href="https://linkedin.com/in/richard-ross-71a4b3217">LinkedIn</a></li>
