--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
                 <li><a routerLink="/hero" routerLinkActive="active" href="hero" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
                 <li><a routerLink="/game" routerLinkActive="active" href="game" class="nav-link scrollto"><i class="bx bx-game"></i> <span>Game</span></a></li>
                 <li><a routerLink="/geo" routerLinkActive="active" href="geo" class="nav-link scrollto"><i class="bx bx-game"></i> <span>Test</span></a></li>
-                <li><a href="https://drive.google.com/file/d/1tyWNmOq45BKWdVjwRjGOcruZfbEp9qHk/view" target="_blank" class="nav-link scrollto"><i class="bx bxl-google-cloud" download></i> <span>Download CV</span></a></li>
+                <li><a href="https://drive.google.com/file/d/1wQ2BYl3AZJY0_x3n-Vqv93GpcPtdteWU/view?usp=sharing" target="_blank" class="nav-link scrollto"><i class="bx bxl-google-cloud" download></i> <span>Download CV</span></a></li>
             </ul>
         </nav>
     </div>
