👌 IMPROVE: Functionality and layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,16 +12,17 @@
         </div>
 
         <nav id="navbar" class="nav-menu navbar">
-            <ul>
-                <li><a routerLink="" routerLinkActive="active" href="" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
-                <li><a routerLink="/about" routerLinkActive="active" href="about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-                <li><a routerLink="/resume" routerLinkActive="active" href="resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-                <li><a routerLink="/hero" routerLinkActive="active" href="hero" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
-                <li><a routerLink="/game" routerLinkActive="active" href="game" class="nav-link scrollto"><i class="bx bx-game"></i> <span>Game</span></a></li>
-                <li><a routerLink="/geo" routerLinkActive="active" href="geo" class="nav-link scrollto"><i class="bx bx-game"></i> <span>Test</span></a></li>
-                <li><a href="https://drive.google.com/file/d/1wQ2BYl3AZJY0_x3n-Vqv93GpcPtdteWU/view?usp=sharing" target="_blank" class="nav-link scrollto"><i class="bx bxl-google-cloud" download></i> <span>Download CV</span></a></li>
-            </ul>
+        <ul>
+            <li><a routerLink="/" routerLinkActive="active" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
+            <li><a routerLink="/about" routerLinkActive="active" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+            <li><a routerLink="/resume" routerLinkActive="active" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+            <li><a routerLink="/geo" routerLinkActive="active" class="nav-link scrollto"><i class="bx bx-compass"></i> <span>Currency Exchange</span></a></li>
+            <li><a href="https://drive.google.com/uc?export=download&id=1wQ2BYl3AZJY0_x3n-Vqv93GpcPtdteWU" target="_blank" class="nav-link scrollto">
+            <i class="bx bxl-google-cloud"></i> <span>Download Resume</span></a>
+            </li>
+        </ul>
         </nav>
+
     </div>
 </header>
 <router-outlet></router-outlet>
