--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,86 +1,144 @@
 <main id="main">
-    <!-- ======= Resume Section ======= -->
-    <section id="resume" class="resume">
-        <div class="container">
+  <!-- ======= Resume Section ======= -->
+  <section id="resume" class="resume">
+    <div class="container">
+      <div class="section-title">
+        <h2>Resume</h2>
+      </div>
 
-            <div class="section-title">
-                <h2>Resume</h2>
-            </div>
+      <div class="row">
+        <!-- Left Column -->
+        <div class="col-lg-6" data-aos="fade-up">
+          <h3 class="resume-title">Summary</h3>
+          <div class="resume-item pb-0">
+            <h4>Richard Ross</h4>
+            <p>
+              <em>
+                Seasoned Full-Stack Developer skilled in Laravel, React, Vue.js, Go, and MySQL. Adept at designing scalable solutions, building APIs, and collaborating within agile teams to deliver optimized applications.
+              </em>
+            </p>
+            <ul>
+              <li>Randpark Ridge, Randburg 2188</li>
+              <li>+27 81 314 8131</li>
+              <li>richross707@gmail.com</li>
+              <li>
+                <a href="https://github.com/RichardMarkRoss">GitHub</a> |
+                <a href="https://linkedin.com/in/richard-ross-71a4b3217">LinkedIn</a>
+              </li>
+            </ul>
+          </div>
 
-            <div class="row">
-                <!-- Left Column -->
-                <div class="col-lg-6" data-aos="fade-up">
-                    <h3 class="resume-title">Summary</h3>
-                    <div class="resume-item pb-0">
-                        <h4>Richard Ross</h4>
-                        <p><em>Seasoned Full-Stack Developer skilled in Laravel, React, Vue.js, Go, and MySQL. Adept at designing scalable solutions, building APIs, and collaborating within agile teams to deliver optimized applications.</em></p>
-                        <ul>
-                            <li>Randpark Ridge, Randburg 2188</li>
-                            <li>+27 81 314 8131</li>
-                            <li>richross707@gmail.com</li>
-                            <li><a href="https://github.com/RichardMarkRoss">GitHub</a> | <a href="https://linkedin.com/in/richard-ross-71a4b3217">LinkedIn</a></li>
-                        </ul>
-                    </div>
+          <h3 class="resume-title">Skills</h3>
+          <div class="resume-item">
+            <ul class="two-column-list">
+              <li>Angular</li><li>React</li><li>Vue.js</li><li>Laravel</li>
+              <li>Go</li><li>Docker</li><li>Node.js</li><li>Flutter</li>
+              <li>Python</li><li>Java</li><li>PHP</li><li>Swift</li>
+              <li>MySQL</li><li>MongoDB</li><li>SQL Server</li><li>WordPress Dev</li>
+              <li>Git</li><li>GitHub</li><li>jQuery</li><li>Bootstrap</li>
+            </ul>
+          </div>
 
-                    <h3 class="resume-title">Education</h3>
-                    <div class="resume-item">
-                        <h4>National Certificate in IT (Software/Systems Development)</h4>
-                        <h5>2017 - 2020</h5>
-                        <p><em>Project CodeX, Cape Town</em></p>
-                        <ul>
-                            <li>Achieved Java OCA SE 8 Certification (2019)</li>
-                        </ul>
-                    </div>
-                    <div class="resume-item">
-                        <h4>Excelsior High School | Bachelor’s Pass</h4>
-                        <h5>2011 - 2015</h5>
-                        <p><em>Cape Town, Western Cape</em></p>
-                    </div>
-                </div>
-
-                <!-- Right Column -->
-                <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-                    <h3 class="resume-title">Professional Experience</h3>
-                    <div class="resume-item">
-                        <h4>Full-Stack Developer | Smartz Solutions</h4>
-                        <h5>December 2023 - Present</h5>
-                        <p><em>Randpark Ridge, Randburg</em></p>
-                        <ul>
-                            <li>Developed full-stack applications using Laravel integrated with React and Vue.js.</li>
-                            <li>Built scalable APIs using Go and optimized MySQL database queries.</li>
-                            <li>Collaborated with cross-functional teams in an agile environment.</li>
-                        </ul>
-                    </div>
-                    <div class="resume-item">
-                        <h4>Full-Stack Developer | WorldSportsBetting</h4>
-                        <h5>August 2022 - December 2023</h5>
-                        <p><em>Randpark Ridge, Randburg</em></p>
-                        <ul>
-                            <li>Developed web and mobile applications using React, React Native, Swift, and Dart.</li>
-                            <li>Implemented Node.js and Angular solutions for REST API integrations.</li>
-                            <li>Optimized application performance with rigorous testing and debugging.</li>
-                        </ul>
-                    </div>
-                    <div class="resume-item">
-                        <h4>Full-Stack Developer | AddPay</h4>
-                        <h5>December 2021 - February 2022</h5>
-                        <p><em>Stellenbosch</em></p>
-                        <ul>
-                            <li>Developed Angular-based front-end applications and WordPress plugins.</li>
-                            <li>Worked on POS device software and cloud-based payment workflows.</li>
-                        </ul>
-                    </div>
-                    <div class="resume-item">
-                        <h4>Business Integration Analyst | Accenture</h4>
-                        <h5>2020 - 2021</h5>
-                        <p><em>Centurion & Midrand</em></p>
-                        <ul>
-                            <li>Developed data models using ABAP CDS for SAP S/4HANA projects.</li>
-                            <li>Automated processes using Python and Java for Oracle Cloud integrations.</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+          <h3 class="resume-title">Education</h3>
+          <div class="resume-item">
+            <h4>National Certificate in IT (Software/Systems Development)</h4>
+            <h5>2018 - 2019</h5>
+            <p><em>Project CodeX, Cape Town</em></p>
+            <ul>
+              <li>Achieved Java OCA SE 8 Certification (2019)</li>
+            </ul>
+          </div>
+          <div class="resume-item">
+            <h4>App Development Course</h4>
+            <h5>Aug 2017 – Nov 2017</h5>
+            <p><em>I-CAN Community College, Cape Town</em></p>
+            <p>Focused on front-end design and multi-screen navigation.</p>
+          </div>
+          <div class="resume-item">
+            <h4>Excelsior High School | Bachelor’s Pass</h4>
+            <h5>2011 - 2015</h5>
+            <p><em>Cape Town, Western Cape</em></p>
+          </div>
         </div>
-    </section>
+
+        <!-- Right Column -->
+        <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <h3 class="resume-title">Professional Experience</h3>
+
+          <div class="resume-item">
+            <h4>Full-Stack Developer | Smartz Solutions</h4>
+            <h5>Dec 2023 - Present</h5>
+            <p><em>Randburg</em></p>
+            <ul>
+              <li>Developed full-stack apps using Laravel, React, and Vue.js.</li>
+              <li>Built scalable APIs with Go and optimized MySQL queries.</li>
+              <li>Worked in agile teams delivering iterative features.</li>
+            </ul>
+          </div>
+
+          <div class="resume-item">
+            <h4>Full-Stack Developer | WorldSportsBetting</h4>
+            <h5>Aug 2022 - Nov 2023</h5>
+            <p><em>Randburg</em></p>
+            <ul>
+              <li>Built web/mobile apps using React, Dart, Swift, and Node.js.</li>
+              <li>Leveraged Angular and REST APIs for responsive experiences.</li>
+              <li>Tested and optimized applications for peak performance.</li>
+            </ul>
+          </div>
+
+          <div class="resume-item">
+            <h4>Full-Stack Developer | SAC Trucks</h4>
+            <h5>Mar 2022 – Jul 2022</h5>
+            <p><em>Broederstroom</em></p>
+            <ul>
+              <li>Maintained PHP-based web apps and MySQL backends.</li>
+              <li>Built mobile features with Flutter and secure APIs.</li>
+              <li>Debugged and resolved backend performance issues.</li>
+            </ul>
+          </div>
+
+          <div class="resume-item">
+            <h4>Full-Stack Developer | AddPay</h4>
+            <h5>Dec 2021 - Feb 2022</h5>
+            <p><em>Stellenbosch</em></p>
+            <ul>
+              <li>Developed Angular front-ends and WordPress plugins.</li>
+              <li>Worked on cloud payment flows and POS integrations.</li>
+            </ul>
+          </div>
+
+          <div class="resume-item">
+            <h4>Business Integration Analyst | Accenture</h4>
+            <h5>2020 - 2021</h5>
+            <p><em>Centurion</em></p>
+            <ul>
+              <li>Built ABAP CDS data models for SAP S/4HANA.</li>
+              <li>Automated Oracle Cloud workflows using Python/Java.</li>
+            </ul>
+          </div>
+
+          <div class="resume-item">
+            <h4>Fiber Technician & Driver | Libby Constructions</h4>
+            <h5>2017 - 2019</h5>
+            <p><em>Cape Town</em></p>
+            <ul>
+              <li>Installed and tested fiber-optic networks.</li>
+              <li>Drove and delivered fiber equipment to sites.</li>
+            </ul>
+          </div>
+
+          <div class="resume-item">
+            <h4>Junior Real Estate Agent | Jawitz Property</h4>
+            <h5>2016 - 2017</h5>
+            <p><em>Cape Town</em></p>
+            <ul>
+              <li>Assisted buyers and sellers with property transactions.</li>
+              <li>Built negotiation and client service skills.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </main>
